<resources>
  <string name="app_name">盈科生态</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_refresh">Refresh</string>
  <string name="business_guide">业务指南</string>
  <string name="conseling_center">资讯中心</string>
  <string name="online_guide">在线咨询</string>
  <string name="busines_find">业务查询</string>
  <string name="concel_kefu">咨询客服</string>
  <string name="star_degree">满意度</string>
  <string name="business_number">业务编号</string>
  <string name="source">来源</string>
  <string name="write_time">签订时间</string>
  <string name="business_people">业务员</string>
  <string name="hetong_number">合同编号</string>
  <string name="sale_one">在线咨询</string>
  <string name="sale_two">客户列表</string>
  <string name="sale_three">业务列表</string>
  <string name="sale_four">业绩查询</string>
  <string name="custom_name">客户姓名</string>
  <string name="customer">客户:</string>
  <string name="qianding_time">签订日期: </string>
  <string name="business_comment_name">推荐人</string>
  <string name="business_totle_price">总金额</string>
  <string name="business_price">业务员提成</string>
  <string name="business_comment_price">推荐人提成</string>
  <string name="business_content">业务内容</string>
  <string name="business_jilu">跟踪记录</string>
  <string name="customer_detail_place">所在地</string>
  <string name="customer_detail_sex">性别</string>
  <string name="customer_detail_time">注册时间</string>
  <string name="customer_detail_number">当前业务编号</string>
  <string name="customer_detail_people">推荐人</string>
  <string name="customer_detail_comment">客户评价</string>
  <string name="customer_detail_history">咨询历史</string>
  <string name="customer_detail_write">业务记录</string>
  <string name="login_phone">手机号码</string>
  <string name="login_secreate">密码</string>
  <string name="login_secreate_write">填写密码</string>
  <string name="login_phone_write">填写手机号码</string>
  <string name="login_text">登录</string>
  <string name="login_text_in">现在注册</string>
  <string name="yanzheng_code">验证码</string>
  <string name="zhuce">注册</string>
  <string name="receive_yanzheng_code">获取验证码</string>
  <string name="phone_cant_null">请输入正确手机号</string>
  <string name="code_cant_null">请输入验证码</string>
  <string name="secreate_cant_null">请输入密码</string>
  <string name="liji_tiyan">立即体验</string>
  <string name="your_name">您的姓名</string>
  <string name="input_your_name">请输入您的姓名</string>
  <string name="input_your_sex">请选择您的性别</string>
  <string name="input_your_adress">请输入您的地址</string>
  <string name="input_your_diplayname">请输入您的昵称</string>
  <string name="loading">请稍后...</string>
  <string name="waterfall_hasmore">奋力加载中.</string>
  <string name="waterfall_loading">奋力加载中...</string>
  <string name="waterfall_nomore">没有更多了</string>
  <string name="waterfall_empty">没有数据!</string>
  <string name="waterfall_retry">加载失败，点击重试</string>
  <string name="zixun_detail">资讯详情</string>
  <string name="login_faile">登录失败，请重试</string>
  <string name="zhuce_faile">注册失败，请重试</string>
  <string name="no_net">暂无网络,请检查网络</string>
  <string name="detailmenu_myacount">我的账户</string>
  <string name="detailmenu_change">更改密码</string>
  <string name="find_password">找回密码</string>
  <string name="detailmenu_exit">退出登录</string>
  <string name="update_yout_acount">更新您的账户</string>
  <string name="confirm_update">确认更改</string>
  <string name="your_place">所在地区</string>
  <string name="your_displayname">显示名称</string>
  <string name="try_agin">请求失败,请重试！</string>
  <string name="try_agin_agin">操作失败,请重试！</string>
  <string name="success">成功!</string>
  <string name="origin_password">原密码</string>
  <string name="new_password">新密码</string>
  <string name="sure_password">再次确认</string>
  <string name="no_password">输入的新密码不一致，请检查！</string>
  <string name="update_password">更改密码</string>
  <string name="no_data">暂无数据!</string>
  <string name="send">发送</string>
  <string name="photo">从相册选取图片</string>
  <string name="take_photo">拍照获取图片</string>
  <string name="login_shuoming">点击上面的"注册"按钮,即表示同意</string>
  <string name="login_shuoming_two">《软件许可及服务协议》</string>
  <string name="login_shuoming_three">软件许可及服务协议</string>
  <string name="succes_send">验证码已发送,请注意查看！</string>
  <string name="send_send">后重新发送</string>
  <string name="shuru_mima_limit">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
  <string name="text_ack_msg">已读</string>
  <string name="text_delivered_msg">送达</string>
  <string name="back">返回</string>
  <string name="save">保存</string>
  <string name="button_pushtotalk">按住说话</string>
  <string name="button_send">发送</string>
  <string name="attach_smile">表情</string>
  <string name="attach_picture">图片</string>
  <string name="attach_take_pic">拍照</string>
  <string name="attach_location">位置</string>
  <string name="attach_video">视频</string>
  <string name="attach_file">文件</string>
  <string name="attach_voice_call">语音电话</string>
  <string name="attach_video_call">视频通话</string>
  <string name="user_card">名片</string>
  <string name="move_up_to_cancel">手指上滑，取消发送</string>
  <string name="release_to_cancel">松开手指，取消发送</string>
  <string name="send_fail">发送消息失败,</string>
  <string name="delete_message">删除消息</string>
  <string name="delete_conversation_messages">删除会话和消息</string>
  <string name="delete_conversation">删除会话</string>
  <string name="copy_message">复制消息</string>
  <string name="delete_voice">删除语音</string>
  <string name="delete_video">删除视频</string>
  <string name="delete">删除</string>
  <string name="resend">重发</string>
  <string name="confirm_resend">确认重发该信息？</string>
  <string name="connect_failuer_toast">请检查网络或稍候重试</string>
  <string name="network_unavailable">网络连接不可用，请检查网络</string>
  <string name="copy">复制</string>
  <string name="forward">转发</string>
  <string name="button_logout">退出登录</string>
  <string name="button_uploadlog">上传运行日志</string>
  <string name="ok">确定</string>
  <string name="cancel">取消</string>
  <string name="prompt">提示</string>
  <string name="clear_records">清空记录</string>
  <string name="clear_all_records">是否清空所有聊天记录？</string>
  <string name="location_recv">[%1$s的位置]</string>
  <string name="location_message">位置信息</string>
  <string name="recording_video">录制视频</string>
  <string name="location_prefix">[我的位置]</string>
  <string name="picture">[图片]</string>
  <string name="video">[视频]</string>
  <string name="file">[文件]</string>
  <string name="voice_call">[语音通话]</string>
  <string name="button_cancel">取消</string>
  <string name="button_save">保存</string>
  <string name="button_search">查找</string>
  <string name="button_add">添加</string>
  <string name="search_header">搜</string>
  <string name="network_isnot_available">网络不可用</string>
  <string name="recoding_fail">录音失败，请重试！</string>
  <string name="select_contacts">选择联系人</string>
  <string name="confirm_forward_to">确定转发到：%1$s ?</string>
  <string name="logout">退出登录</string>
  <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
  <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
  <string name="dissolution_group_hint">退出后，此群将被解散</string>
  <string name="exit_group">退出</string>
  <string name="connect_conflict">同一帐号已在其他设备登录</string>
  <string name="em_user_remove">此用户已被移除</string>
  <string name="set">设置</string>
  <string name="notify">新消息提醒</string>
  <string name="newnotify">接收新消息通知</string>
  <string name="voice">声音</string>
  <string name="shake">震动</string>
  <string name="chatset">聊天设置</string>
  <string name="yangshengqi">使用扬声器播放语音</string>
  <string name="book_black">通讯录黑名单</string>
  <string name="session">会话</string>
  <string name="address_book">通讯录</string>
  <string name="setting">设置</string>
  <string name="now_refresh_list">正在刷新联系人</string>
  <string name="Application_and_notify">申请与通知</string>
  <string name="save_new_nickname">保存</string>
  <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
  <string name="group_chat">群聊</string>
  <string name="chat_room">聊天室</string>
  <string name="add_friend">添加好友</string>
  <string name="search">搜索</string>
  <string name="black_item">黑名单</string>
  <string name="diagnose">诊断</string>
  <string name="push_nick">iOS离线推送昵称</string>
  <string name="Current_version">当前版本</string>
  <string name="Not_Set">未设置</string>
  <string name="Upload_the_log">上传日志中</string>
  <string name="The_new_group_chat">新建群组</string>
  <string name="add_public_group_chat">添加公开群</string>
  <string name="add_public_chat_room">添加聊天室</string>
  <string name="group_name">群聊名称</string>
  <string name="Group_chat_profile">群聊简介</string>
  <string name="Whether_the_public">是否公开</string>
  <string name="Open_group_members_invited">开放群成员邀请</string>
  <string name="Open_group_chat">公开的群聊</string>
  <string name="blacklist">黑名单列表</string>
  <string name="Empty_the_chat_record">清空聊天记录</string>
  <string name="Shielding_of_the_message">屏蔽群消息</string>
  <string name="dismiss_group">解散群聊</string>
  <string name="Select_the_contact">选择联系人</string>
  <string name="Group_chat_information">群聊资料</string>
  <string name="Group_of_Lord">群主</string>
  <string name="Introduction">简介</string>
  <string name="To_join_the_chat">加入群聊</string>
  <string name="login">登录</string>
  <string name="user_name">用户名</string>
  <string name="password">密码</string>
  <string name="register">注册</string>
  <string name="confirmpassword">确认密码</string>
  <string name="downwaiting">正在下载文件请稍后</string>
  <string name="mute">静音</string>
  <string name="Hands_free">免提</string>
  <string name="hang_up">挂断</string>
  <string name="answer">接听</string>
  <string name="unable_to_connect">不能连接到服务器</string>
  <string name="newchat">新建聊天</string>
  <string name="agree">同意</string>
  <string name="Group_chat">群聊:</string>
  <string name="not_download">未下载:</string>
  <string name="Please_enter_a_username">请输入用户名</string>
  <string name="is_down_please_wait">正在下载视频请稍候</string>
  <string name="Exit_the_group_chat">退出群聊</string>
  <string name="not_add_myself">不能添加自己</string>
  <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
  <string name="Add_a_friend">加个好友呗</string>
  <string name="send_successful">发送请求成功,等待对方验证</string>
  <string name="Request_add_buddy_failure">请求添加好友失败:</string>
  <string name="Network_error">网络出错</string>
  <string name="Making_sure_your_location">正在确定你的位置...</string>
  <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
  <string name="expression">[表情]</string>
  <string name="Removed_from_the_failure">移出失败</string>
  <string name="be_removing">正在移出...</string>
  <string name="call_duration">通话时长</string>
  <string name="Refused">已拒绝</string>
  <string name="The_other_party_has_refused_to">对方已拒绝</string>
  <string name="The_other_is_not_online">对方不在线</string>
  <string name="The_other_is_on_the_phone">对方正在通话中</string>
  <string name="The_other_party_did_not_answer">对方未接听</string>
  <string name="did_not_answer">未接听</string>
  <string name="Has_been_cancelled">已取消</string>
  <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
  <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
  <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
  <string name="cant_find_pictures">找不到图片</string>
  <string name="File_does_not_exist">文件不存在</string>
  <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
  <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
  <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
  <string name="Recording_without_permission">无录音权限</string>
  <string name="The_recording_time_is_too_short">录音时间太短</string>
  <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
  <string name="Move_into_blacklist_success">移入黑名单成功</string>
  <string name="Move_into_blacklist_failure">移入黑名单失败</string>
  <string name="you_are_group">你被群创建者从此群中移除</string>
  <string name="the_current_group">当前群聊已被群创建者解散</string>
  <string name="Cant_chat_with_yourself">不能和自己聊天</string>
  <string name="deleting">正在删除...</string>
  <string name="Delete_failed">删除失败:</string>
  <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
</resources>