<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">
    <com.yingke.shengtai.view.TitleView
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/login_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text_big_color"
            android:text="+86"/>
        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:inputType="number"
            android:textColor="@color/text_big_color"
            android:hint="@string/login_phone_write"
            android:background="@null"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/yanzhengma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:layout_marginRight="15dp"
            android:textColor="@color/text_big_color"
            android:layout_alignParentBottom="true"
            android:text="@string/yanzheng_code"
           />
        <TextView
            android:id="@+id/reciver"
            android:layout_alignParentRight="true"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/green_bg"
            android:textColor="@color/white_color"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/receive_yanzheng_code"/>
        <EditText
            android:id="@+id/write_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:paddingLeft="25dp"
            android:inputType="number"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/reciver"
            android:layout_toRightOf="@id/yanzhengma"
            android:background="@null"
            android:textColor="@color/text_big_color"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginRight="145dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/write_yanzhengma"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/login_secreate"/>
        <EditText
            android:id="@+id/editsecreste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:textColor="@color/text_big_color"
            android:hint="@string/login_secreate_write"
            android:background="@null"
            android:digits="@string/shuru_mima_limit"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:id="@+id/zhuce"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/sixteen"
        android:text="@string/zhuce"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:background="@drawable/green_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:paddingTop="7dp"
                android:paddingBottom="5dp"
                android:textColor="@color/text_little_color"
                android:text="@string/login_shuoming"
                />
        <TextView
            android:id="@+id/xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:paddingTop="7dp"
            android:paddingBottom="10dp"
            android:textColor="@color/main_color"
            android:text="@string/login_shuoming_two"
            />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
