<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">
    <com.yingke.shengtai.view.TitleView
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/mini_avatar_shadow"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
         />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp"
       android:paddingBottom="5dp"
       android:layout_marginTop="18dp"
       android:orientation="horizontal">
       <TextView
           android:layout_width="75dp"
           android:layout_height="wrap_content"
           android:textSize="@dimen/sixteen"
           android:textColor="@color/text_big_color"
           android:text="@string/login_phone"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/sixteen"
           android:layout_marginLeft="20dp"
           android:textColor="@color/text_big_color"
           android:text="+86"/>
      <EditText
          android:id="@+id/editPhone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/sixteen"
          android:paddingLeft="25dp"
          android:paddingTop="20dp"
          android:inputType="number"
          android:textColor="@color/text_big_color"
          android:hint="@string/login_phone_write"
          android:background="@null"
          android:textColorHint="@color/text_little_color"/>
   </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/login_secreate"/>
        <EditText
            android:id="@+id/editsecreste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:textColor="@color/text_big_color"
            android:hint="@string/login_secreate_write"
            android:background="@null"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lookpassword"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="14sp"
                    android:layout_marginTop="30dp"
                    android:paddingBottom="5dp"
                    android:text="忘记密码？"
                    android:layout_alignParentRight="true"
                    android:paddingTop="20dp"
                    android:gravity="right"
                    android:textColor="@color/text_little_color"
                    />
            </RelativeLayout>
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/sixteen"
        android:text="@string/login_text"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:background="@drawable/green_bg"/>
    <TextView
        android:id="@+id/zhuce"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/sixteen"
        android:text="@string/login_text_in"
        android:gravity="center"
        android:textColor="@color/text_big_color"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
