<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white_color"
    >
    <com.yingke.shengtai.view.TitleView
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/fragment_title"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/origin_password"/>
        <EditText
            android:id="@+id/origin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:layout_marginLeft="25dp"
            android:paddingTop="20dp"
            android:textColor="@color/text_big_color"
            android:background="@null"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout1"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/line1"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/new_password"/>
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:layout_marginLeft="25dp"
            android:paddingTop="20dp"
            android:textColor="@color/text_big_color"
            android:background="@null"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout2"
        />
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/line2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/text_big_color"
            android:text="@string/sure_password"/>
        <EditText
            android:id="@+id/sure_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen"
            android:layout_marginLeft="25dp"
            android:paddingTop="20dp"
            android:textColor="@color/text_big_color"
            android:background="@null"
            android:textColorHint="@color/text_little_color"/>
    </LinearLayout>
    <View
        android:id="@+id/wewewe"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout3"
        />

    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="@dimen/sixteen"
        android:text="@string/update_password"
        android:gravity="center"
        android:layout_below="@+id/wewewe"
        android:layout_marginTop="50dp"
        android:textColor="@color/white_color"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_bg"/>
</RelativeLayout>
